# freemium

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  Makefile  Procfile  README.md  conftest.py  docker-compose.yml  pyproject.toml  rename_to_freemium.ps1  render.yaml
apps/accounts/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
apps/analytics/: apps.py  services.py
apps/billing/: admin.py  apps.py  models.py  services.py  subscriptions.py  urls.py  views.py
apps/marketdata/: admin.py  alerts.py  apps.py  dividends.py  forms.py  fx.py  models.py  services.py  tasks.py  urls.py  views.py
apps/notifications/: admin.py  models.py  services.py  tasks.py  urls.py  views.py
apps/portfolio/: admin.py  allocation.py  apps.py  bonds.py  broker_import.py  corporate_actions.py  dividend_estimate.py  dividend_import.py  exports.py  forecast.py  forms.py  imports.py  income.py  models.py  overview.py  rebalance.py  services.py  snapshots.py  tasks.py  tax.py  urls.py  valuation.py  views.py
config/: __init__.py  celery.py  context_processors.py  urls.py  views.py  wsgi.py
config/settings/: base.py  dev.py  prod.py
docs/: ARCHITECTURE.md  DECISIONS.md  ROADMAP.md
requirements/: base.txt  dev.txt  prod.txt
static/css/: main.css
static/js/: allocation_charts.js  asset_search.js  menu.js  portfolio_chart.js  portfolio_value_chart.js  pwa.js  tables.js  theme.js
templates/: base.html  home.html
templates/account/: email_confirm.html  login.html  logout.html  password_reset.html  password_reset_done.html  signup.html  (+3 more)
(+125 files in other folders)
